--- a/markups-biziness/assets/css/theme-color/bridge-theme.css
+++ b/markups-biziness/assets/css/theme-color/bridge-theme.css
@@ -44,7 +44,7 @@ Author URI : http://www.markups.io/
   background-color: #a5d549;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
   border: 1px solid #a5d549;    
 } 
 
