--- a/markups-biziness/assets/css/theme-color/default-theme-color.css
+++ b/markups-biziness/assets/css/theme-color/default-theme-color.css
@@ -42,7 +42,7 @@ Author URI :
 	background-color: #4568DC;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
 	border: 1px solid #4568DC;    
 } 
 
