--- a/markups-biziness/assets/css/theme-color/default-theme.css
+++ b/markups-biziness/assets/css/theme-color/default-theme.css
@@ -41,7 +41,7 @@ Author URI : http://www.markups.io/
 	background-color: #4568DC;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
 	border: 1px solid #4568DC;    
 } 
 
