--- a/markups-biziness/assets/css/theme-color/green-theme.css
+++ b/markups-biziness/assets/css/theme-color/green-theme.css
@@ -42,7 +42,7 @@ Author URI : http://www.markups.io/
   background-color: #3fc35f;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
   border: 1px solid #3fc35f;    
 } 
 
