--- a/markups-biziness/assets/css/theme-color/lite-blue-theme.css
+++ b/markups-biziness/assets/css/theme-color/lite-blue-theme.css
@@ -1,4 +1,4 @@
-
+s
 
 /*=======================================
 Template Design By MarkUps  
@@ -42,7 +42,7 @@ Author URI : http://www.markups.io/
   background-color: #37c6f5;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
   border: 1px solid #37c6f5;    
 } 
 
