--- a/markups-biziness/assets/css/theme-color/orange-theme.css
+++ b/markups-biziness/assets/css/theme-color/orange-theme.css
@@ -43,7 +43,7 @@ Author URI : http://www.markups.io/
   background-color: #ff871c;
 }
 
-.mu-contact-form .form-control:focus {
+.mu-stock-broker-form .form-control:focus {
   border: 1px solid #ff871c;    
 } 
 
