--- a/markups-biziness/style.css
+++ b/markups-biziness/style.css
@@ -499,7 +499,6 @@ button:focus {
 /*--------------------*/
 
 #mu-counter {
-	background-image: url("assets/images/counter-bg.jpeg");
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -892,7 +891,6 @@ button:focus {
 /*--------------------*/
 
 #mu-testimonials {
-	background-image: url("assets/images/testimonials-bg.jpeg");
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -903,7 +901,7 @@ button:focus {
 }
 
 #mu-testimonials::before {
-	background: rgba(0,0,0,0.9);
+	background: white;
 	bottom: 0;
 	content: '';
 	left: 0;
@@ -921,7 +919,7 @@ button:focus {
 }
 
 .mu-testimonials-area h2 {
-	color: #fff;
+	color: black;
 	text-align: center;
 }
 
